# grupr-test-bots

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  pyproject.toml
lib/: code_extractor.py  code_review_client.py  grupr_client.py  persona_runner.py  reporter.py  user_client.py
personas/: admin.py  adversary.py  code_role_bot.py  code_workshop.py  conversational.py  external_dev.py  new_user.py  power_user.py
personas/apps/: fetcher.md  urlshortener.md
runs/2026-05-13_pre-launch/: summary.md
runs/disagreement-study-20260520T013836Z/: prs.json  summary.md
runs/e2b-load-test-20260520T205014Z/: runs.json  summary.md
runs/pentest-prompt-injection-20260521T010715Z/: result.json  summary.md
scripts/: audit-code-review-v1.py  cleanup-test-accounts.sh  load-test-deep-tier.py  multi-bot-workshop.sh  pentest-prompt-injection.py  run-all-codebuild.sh  run-all.sh  run-bots-build-app.sh  run-persona.sh  seed-test-accounts.sh  smoke-code-review-state-machine.py  smoke-code-review-wrappers.py  smoke-deep-patcher.py  smoke-deep-tier-flow.py  smoke-enterprise-checkout.py  smoke-global-trial-breaker.py  smoke-groq-provider.py  smoke-load-trial-breaker.py  smoke-login.py  smoke-perplexity-provider.py  smoke-sandbox-exec.py  smoke-sat-external.py  smoke-sat-gating.py  smoke-security-pentest.py  smoke-smart-tier-wiring.py  smoke-stripe-connect-onboard.py  smoke-trial-daily-cap.py  smoke-trial-fallback.py  smoke-trial-start.py
scripts/disagreement-study/: aggregate.py  run_study.py  select_prs.py
skills/admin/: SKILL.md
skills/adversary/: SKILL.md
(+74 files in other folders)
